Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14536

kiblnd does resend for IB_CM_REJ_INVALID_SERVICE_ID

Details

    • 3
    • 9223372036854775807

    Description

      when connecting to a host which is not up, for each discovery we will try retry_count(see kiblnd_check_reconnect) * lnet_retry_count(for resend) times.

      and for each ost when mounting the mdt, we will process attach add_conn(if ost has failover node) and add_osc so 3 times discovery.

      mounting of mdt when other nodes are not up can take very long, making customer think the mount is stuck.

      Attachments

        Activity

          People

            dongyang Dongyang Li
            dongyang Dongyang Li
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: